@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-04T08:08:37Z",
-  "count_outdated" : 1556,
-  "uniques_outdated" : 87,
-  "count" : 1626,
-  "uniques" : 96,
+  "timestamp" : "2022-06-04T16:08:34Z",
+  "count_outdated" : 1562,
+  "uniques_outdated" : 88,
+  "count" : 1629,
+  "uniques" : 97,
   "views" : [
-    {
-      "timestamp": "2022-05-21T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-24T00:00:00Z",
       "count": 28,
@@ -63,10 +56,10 @@
     },
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 5,
+      "count_minmax": [ 2, 5 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
