@@ -1,12 +1,7 @@
 {
-  "count": 70,
-  "uniques": 1,
+  "count": 67,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-05-21T00:00:00Z",
-      "count": 6,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-24T00:00:00Z",
       "count": 28,
@@ -44,8 +39,8 @@
     },
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 5,
+      "uniques": 2
     }
   ]
 }
